finish touter
