# auth/docs/swagger.json
@@ -9,52 +9,6 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/tutor/auth/init": {
-            "post": {
-                "description": "Checks if email/phone are available and creates a preliminary tutor record",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tutor"
-                ],
-                "summary": "Initialize tutor registration",
-                "parameters": [
-                    {
-                        "description": "Init request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.InitRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.GenericResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/tutor/auth/login": {
             "post": {
                 "description": "Authenticates tutor and returns JWT tokens",
@@ -97,6 +51,12 @@
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -116,6 +76,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.GenericResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
                         }
                     },
                     "500": {
@@ -219,6 +185,44 @@
                 }
             }
         },
+        "/tutor/auth/profile": {
+            "get": {
+                "description": "Returns the current profile of the tutor",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tutor"
+                ],
+                "summary": "Get tutor profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ProfileResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/tutor/auth/register": {
             "post": {
                 "description": "Registers a new tutor with provided details",
@@ -282,6 +286,12 @@
                             "$ref": "#/definitions/response.SessionsResponse"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -323,30 +333,10 @@
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/tutor/auth/status": {
-            "get": {
-                "description": "Returns the current status of the tutor",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tutor"
-                ],
-                "summary": "Get tutor status",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.StatusResponse"
                         }
                     },
                     "500": {
@@ -360,7 +350,7 @@
         },
         "/tutor/auth/token/refresh": {
             "post": {
-                "description": "Refreshes access and refresh tokens",
+                "description": "Refreshes the access and refresh tokens for the tutor",
                 "consumes": [
                     "application/json"
                 ],
@@ -370,7 +360,7 @@
                 "tags": [
                     "tutor"
                 ],
-                "summary": "Refresh JWT token",
+                "summary": "Refresh tutor tokens",
                 "parameters": [
                     {
                         "description": "Token refresh request",
@@ -400,46 +390,6 @@
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
-                    }
-                }
-            }
-        },
-        "/tutor/auth/verify/email": {
-            "post": {
-                "description": "Verifies the email with OTP",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tutor"
-                ],
-                "summary": "Verify tutor email",
-                "parameters": [
-                    {
-                        "description": "Verify email request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.VerifyEmailRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.GenericResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -450,9 +400,9 @@
                 }
             }
         },
-        "/tutor/auth/verify/phone": {
+        "/tutor/auth/verify": {
             "post": {
-                "description": "Verifies the phone with OTP",
+                "description": "Verifies the contact with OTP",
                 "consumes": [
                     "application/json"
                 ],
@@ -462,15 +412,15 @@
                 "tags": [
                     "tutor"
                 ],
-                "summary": "Verify tutor phone",
+                "summary": "Verify tutor contact (email or phone)",
                 "parameters": [
                     {
-                        "description": "Verify phone request",
+                        "description": "Verify request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.VerifyPhoneRequest"
+                            "$ref": "#/definitions/request.VerifyRequest"
                         }
                     }
                 ],
@@ -498,21 +448,6 @@
         }
     },
     "definitions": {
-        "request.InitRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "phone"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                }
-            }
-        },
         "request.LoginRequest": {
             "type": "object",
             "required": [
@@ -598,32 +533,17 @@
                 }
             }
         },
-        "request.VerifyEmailRequest": {
+        "request.VerifyRequest": {
             "type": "object",
             "required": [
-                "email",
+                "email_or_phone",
                 "otp"
             ],
             "properties": {
-                "email": {
+                "email_or_phone": {
                     "type": "string"
                 },
                 "otp": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.VerifyPhoneRequest": {
-            "type": "object",
-            "required": [
-                "otp",
-                "phone"
-            ],
-            "properties": {
-                "otp": {
-                    "type": "string"
-                },
-                "phone": {
                     "type": "string"
                 }
             }
@@ -655,6 +575,29 @@
                 }
             }
         },
+        "response.ProfileResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "response.SessionsResponse": {
             "type": "object",
             "properties": {
@@ -663,14 +606,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "response.StatusResponse": {
-            "type": "object",
-            "properties": {
-                "status": {
-                    "type": "string"
                 }
             }
         }
